--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ h2 {
   </div>
 
   <div class="header-logo">
-    <img src="../logo.png.png" alt="Elite Connect Logo">
+    <img src="logo.png.png" alt="Elite Connect Logo">
   </div>
 </header>
 
