--- a/index.html
+++ b/index.html
@@ -413,8 +413,8 @@ h2 {
   <div class="contact-box">
     <p>Get in touch with our team today</p>
     <div class="contact-info">
-      <div class="phone">📞 +1 239-480-4946</div>
-      <div class="email">✉️ contact@eliteconnect.com</div>
+      <div class="phone">📞 239-480-4946</div>
+      <div class="email">✉️ eliteconnectstation@gmail.com</div>
     </div>
   </div>
 </section>
